--- a/static/style.css
+++ b/static/style.css
@@ -15,6 +15,11 @@ body{
 #playerList{
   float:right;
 }
-#chat{
+#chatList{
+  display:none;
   background-color:white;
+  margin-top:5px;
+  overflow-y:scroll;
+  width:300px;
+  height:100px;
 }
