--- a/static/style.css
+++ b/static/style.css
@@ -15,6 +15,16 @@ body{
 #playerList{
   float:right;
 }
+#refresh{
+  display:none;
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
 #chatList{
   display:none;
   background-color:white;
