--- a/static/style.css
+++ b/static/style.css
@@ -20,6 +20,13 @@ body{
 
 
 }
+#chatValue{
+  float:left;
+margin-top:5%;
+}
+#chatSend{
+  float:right;
+}
 #lobbylist input[type=button], input[type=submit], input[type=reset] {
     background-color: DimGray;
     border: none;
@@ -50,6 +57,7 @@ body{
 
 
 }
+
 #same {
 display:none;
   margin-left:auto;
@@ -89,11 +97,11 @@ float:right;
 }
 
 #chatList{
-
+  float:right;
   display:none;
   background-color:white;
   margin-top:5px;
   overflow-y:scroll;
-  width:300px;
+  width:350px;
   height:100px;
 }
